--- a/index.html
+++ b/index.html
@@ -346,11 +346,16 @@
               </svg>
             </a>
             <a href="" class="footer-svg-icon-link"
-              ><svg class="footer-svg-icon" width="40" height="40">
+              ><svg
+                class="footer-svg-icon"
+                width="40"
+                height="40"
+              >
+  
                 <use
                   href="./images/icons.svg#icon-twitter-footer"
-                ></use></svg></a
-            ><a href="" class="footer-svg-icon-link">
+                ></use></svg>
+                <a href="" class="footer-svg-icon-link">
               <svg class="footer-svg-icon" width="40" height="40">
                 <use
                   href="./images/icons.svg#icon-facebook-footer"
