--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,18 @@
           </nav>
         </div>
         <div class="contacts">
-          <a href="mailto:info@devstudio.com" class="link description"
+          <svg width="34" height="24" class="contacts-icon">
+            <use href="./images/icons.svg#icon-envelop"></use>
+          </svg>
+          <a
+            href="mailto:info@devstudio.com"
+            class="link description contact-icon"
             >info@devstudio.com</a
           >
-          <a href="tel:+110001111111" class="link description"
+          <svg width="24" height="20" class="contacts-icon">
+            <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+          <a href="tel:+110001111111" class="link description contact-icon"
             >+11 (000) 111-11-11</a
           >
         </div>
