--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <!-- <style>
-      .footer-svg-icon:hover {
-        fill: var(#31d0aa);
-      }
-    </style> -->
     <title>Studio</title>
   </head>
   <body>
@@ -165,28 +162,36 @@
               />
               <h3 class="crosstitle">Mark Guerrero</h3>
               <p class="description">Product Designer</p>
-              <div class="team-svg-icons">
-                <a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-insta-blue"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-twitter-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-facebook-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin-blue"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="team-svg-icons">
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item person">
               <img
@@ -197,28 +202,36 @@
               />
               <h3 class="crosstitle">Tom Ford</h3>
               <p class="description">Frontend Developer</p>
-              <div class="team-svg-icons">
-                <a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-insta-blue"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-twitter-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-facebook-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin-blue"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="team-svg-icons">
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item person">
               <img
@@ -229,28 +242,36 @@
               />
               <h3 class="crosstitle">Camila Garcia</h3>
               <p class="description">Marketing</p>
-              <div class="team-svg-icons">
-                <a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-insta-blue"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-twitter-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-facebook-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin-blue"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="team-svg-icons">
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item person">
               <img
@@ -261,28 +282,36 @@
               />
               <h3 class="crosstitle">Daniel Wilson</h3>
               <p class="description">UI Designer</p>
-              <div class="team-svg-icons">
-                <a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-insta-blue"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-twitter-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link">
-                  <svg class="team-svg-icon" width="40" height="40">
-                    <use
-                      href="./images/icons.svg#icon-facebook-blue"
-                    ></use></svg></a
-                ><a href="" class="team-svg-icon-link"
-                  ><svg class="team-svg-icon" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin-blue"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="team-svg-icons">
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link">
+                    <svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-svg-icon-li">
+                  <a href="" class="team-svg-icon-link"
+                    ><svg class="team-svg-icon" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -293,34 +322,48 @@
           <h2 class="subtitle">Customers</h2>
           <ul class="customers-items">
             <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-yaco"></use>
-              </svg>
+              <a href="" class="customers-svg-link">
+                <svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-svg-link">
+                <svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-tagline-here"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customers-item">
+              <a href="" class="customers-svg-link"
+                ><svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-tagline-here"></use>
-              </svg>
+              <a href="" class="customers-svg-link"
+                ><svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-foster-peters"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-company"></use>
-              </svg>
+              <a href="" class="customers-svg-link"
+                ><svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-foster-peters"></use>
-              </svg>
-            </li>
-            <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-brand"></use>
-              </svg>
-            </li>
-            <li class="customers-item">
-              <svg class="customers-svg-icon" width="168" height="88">
-                <use href="./images/icons.svg#icon-tag-line"></use>
-              </svg>
+              <a href="" class="customers-svg-link"
+                ><svg class="customers-svg-icon" width="168" height="88">
+                  <use href="./images/icons.svg#icon-tag-line"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -338,34 +381,37 @@
           </p>
         </div>
         <div class="footer-social">
-          <p class="footer-title-icons">Social media</p>
-          <div class="footer-svg-icons">
-            <a href="" class="footer-svg-icon-link">
-              <svg class="footer-svg-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-insta-footer"></use>
-              </svg>
-            </a>
-            <a href="" class="footer-svg-icon-link"
-              ><svg
-                class="footer-svg-icon"
-                width="40"
-                height="40"
-              >
-  
-                <use
-                  href="./images/icons.svg#icon-twitter-footer"
-                ></use></svg>
-                <a href="" class="footer-svg-icon-link">
-              <svg class="footer-svg-icon" width="40" height="40">
-                <use
-                  href="./images/icons.svg#icon-facebook-footer"
-                ></use></svg></a
-            ><a href="" class="footer-svg-icon-link"
-              ><svg class="footer-svg-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-linkedin-footer"></use>
-              </svg>
-            </a>
-          </div>
+          <h3 class="footer-title-icons">Social media</h3>
+          <ul class="footer-svg-icons">
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link">
+                <svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link"
+                ><svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link">
+                <svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link"
+                ><svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
