--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -207,29 +209,37 @@
           </p>
         </div>
         <div class="footer-social">
-          <p class="footer-title-icons">Social media</p>
-          <div class="footer-svg-icons">
-            <a href="" class="footer-svg-icon-link">
-              <svg class="footer-svg-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-insta-footer"></use>
-              </svg>
-            </a>
-            <a href="" class="footer-svg-icon-link"
-              ><svg class="footer-svg-icon" width="40" height="40">
-                <use
-                  href="./images/icons.svg#icon-twitter-footer"
-                ></use></svg></a
-            ><a href="" class="footer-svg-icon-link">
-              <svg class="footer-svg-icon" width="40" height="40">
-                <use
-                  href="./images/icons.svg#icon-facebook-footer"
-                ></use></svg></a
-            ><a href="" class="footer-svg-icon-link"
-              ><svg class="footer-svg-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-linkedin-footer"></use>
-              </svg>
-            </a>
-          </div>
+          <h3 class="footer-title-icons">Social media</h3>
+          <ul class="footer-svg-icons">
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link">
+                <svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link"
+                ><svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link">
+                <svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-svg-icon-li">
+              <a href="" class="footer-svg-icon-link"
+                ><svg class="footer-svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
