--- a/index.html
+++ b/index.html
@@ -165,29 +165,29 @@
               <ul class="team-svg-icons">
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -205,29 +205,29 @@
               <ul class="team-svg-icons">
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -245,29 +245,29 @@
               <ul class="team-svg-icons">
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -285,29 +285,29 @@
               <ul class="team-svg-icons">
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link">
-                    <svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook-blue"></use>
+                    <svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-svg-icon-li">
                   <a href="" class="team-svg-icon-link"
-                    ><svg class="team-svg-icon" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin-blue"></use>
+                    ><svg class="team-svg-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -386,28 +386,28 @@
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link">
                 <svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-footer"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link"
                 ><svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-footer"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link">
                 <svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-footer"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link"
                 ><svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
