--- a/portfolio.html
+++ b/portfolio.html
@@ -214,28 +214,28 @@
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link">
                 <svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-footer"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link"
                 ><svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-footer"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link">
                 <svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-footer"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-svg-icon-li">
               <a href="" class="footer-svg-icon-link"
                 ><svg class="footer-svg-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
